[tool.poetry]
name = "python-scheduler"
version = "0.1.0"
description = "Demo of python schedulers"
authors = ["Michael Madden <mikemadden42@icloud.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
APScheduler = "^3.9.1"
colorama = "^0.4.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
