[project]
name = "python-scheduler"
version = "0.1.0"
description = "Demo of python schedulers"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "colorama>=0.4.6",
]

[tool.ruff]
lint.select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I",
    # flake8-bandit
    "S",
    # flake8-bugbear
    "B",
    # Pylint
    "PL"
]

[dependency-groups]
dev = [
    "ruff>=0.14.8",
]
